--- a/_scss/elements/_parallax-image.scss
+++ b/_scss/elements/_parallax-image.scss
@@ -1,38 +1,23 @@
 .parallax-image {
   position: relative;
   overflow: hidden;
+  min-height: 200px;
 
   .full-width-image {
-    font-size: 0;
-    height: 200px;
     overflow: hidden;
-    position: relative;
+    position: absolute;
     width: 100%;
+    height: 100%;
+    top: 0;
 
     img {
-      width: 100%;
+      left: -1000px;
+      margin: 0 auto;
+      min-width: 100%;
+      min-height: 100%;
       position: absolute;
+      right: -1000px;
       top: 0;
-      left: 0;
-    }
-
-    @include breakpoints(mobile nav tablet) {
-      height: auto;
-      max-height: 200px;
-
-      img {
-        position: relative;
-      }
     }
   }
 }
-
-// example height override...
-// .parallax-image .full-width-image {
-//   height: 400px;
-
-//   @include breakpoints(mobile nav tablet) {
-//     height: auto;
-//     max-height: 400px;
-//   }
-// }
