swapped army worldwide as standard banner

--- a/_includes/elements/page-banner.html
+++ b/_includes/elements/page-banner.html
@@ -1,14 +1,12 @@
-<div class="page-banner1 page-banner with-logo">
+<div class="page-banner1 page-banner news-wide parallax-image">
+    <div class="full-width-image">
+        <img src="https://www.army.mil/e2/images/rv7/global-news/mastheads/1600.jpg" srcset="https://www.army.mil/e2/images/rv7/global-news/mastheads/1600.jpg 1600w, https://www.army.mil/e2/images/rv7/global-news/mastheads/1200.jpg 1200w, https://www.army.mil/e2/images/rv7/global-news/mastheads/992.jpg 992w, https://www.army.mil/e2/images/rv7/global-news/mastheads/768.jpg 768w, https://www.army.mil/e2/images/rv7/global-news/mastheads/480.jpg 480w">
+    </div>
     <div class="container">
-        <div class="logo">
-            <img alt="logo alt" src="https://www.army.mil/e2/images/rv7/org/logos/101stairborne.png">
-        </div>
         <div class="inner-container">
             <div class="left-container">
-                <h1>Page Banners</h1>
-                <div class="max-width-container">
-                    <p>Short banner description area here. Should only be a few sentences, at most.</p>
-                </div>
+                <h1>Army Worldwide</h1>
+                <p>The U.S. Army is globally engaged supporting Combatant Command missions.</p>
             </div>
         </div>
     </div>
@@ -44,15 +42,17 @@
     </div>
 </div>
 
-<div class="page-banner3 page-banner news-wide parallax-image">
-    <div class="full-width-image">
-        <img src="https://www.army.mil/e2/images/rv7/global-news/mastheads/1600.jpg" srcset="https://www.army.mil/e2/images/rv7/global-news/mastheads/1600.jpg 1600w, https://www.army.mil/e2/images/rv7/global-news/mastheads/1200.jpg 1200w, https://www.army.mil/e2/images/rv7/global-news/mastheads/992.jpg 992w, https://www.army.mil/e2/images/rv7/global-news/mastheads/768.jpg 768w, https://www.army.mil/e2/images/rv7/global-news/mastheads/480.jpg 480w">
-    </div>
+<div class="page-banner3 page-banner with-logo">
     <div class="container">
+        <div class="logo">
+            <img alt="logo alt" src="https://www.army.mil/e2/images/rv7/org/logos/101stairborne.png">
+        </div>
         <div class="inner-container">
             <div class="left-container">
-                <h1>Army Worldwide</h1>
-                <p>The U.S. Army is globally engaged supporting Combatant Command missions.</p>
+                <h1>Page Banners</h1>
+                <div class="max-width-container">
+                    <p>Short banner description area here. Should only be a few sentences, at most.</p>
+                </div>
             </div>
         </div>
     </div>
@@ -66,7 +66,7 @@
             <ul class="container">
                 <li><a class="active" id="page-banner1" href="">Standard</a></li>
                 <li><a href="#page-banner2">Leaders</a></li>
-                <li><a href="#page-banner3">News</a></li>
+                <li><a href="#page-banner3">Org Pages</a></li>
             </ul>
         </div>
     </div>
