--- a/_scss/base/_mixins.scss
+++ b/_scss/base/_mixins.scss
@@ -54,6 +54,7 @@
 @import "mixins/clearfix";
 @import "mixins/inline-block";
 @import "mixins/word-wrap";
+@import "mixins/display-table";
 
 // ----------------------------------------------------------------------
 
