--- a/_includes/elements/news.html
+++ b/_includes/elements/news.html
@@ -1,84 +1,58 @@
 <div class="news">
-    <ul>
+    <!-- remove class no-dates to see dates -->
+    <ul class="no-dates">
         <li>
-            <a href="#" title="Soldiers and Korean War Veterans Meet in Osan to Discuss War and Resiliency">
+            <a href="#" title="Olympics live coverage available to most Soldiers worldwide">
                 <span class="image">
-                    <img class="resp-image" srcset="https://www.army.mil/e2/c/images/2016/04/24/432080/size0.jpg 640w, https://www.army.mil/e2/c/images/2016/04/24/432080/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/04/24/432080/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/04/24/432080/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/04/24/432080/size4.jpg 100w" sizes="(min-width: 640px) 640px" src="https://www.army.mil/e2/c/images/2016/04/24/432080/size2.jpg" alt="temp image caption">
+                    <img srcset="https://www.army.mil/e2/c/images/2016/08/04/445752/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/04/445752/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/04/445752/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/04/445752/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/04/445752/size1.jpg" alt="Olympics live coverage available to most Soldiers worldwide">
                 </span>
-                <span class="date"><span>April 24, 2016</span></span>
-                <span class="title">Soldiers and Korean War Veterans Meet in Osan to Discuss War and Resiliency</span>
+                <span class="title">Olympics live coverage available to most Soldiers worldwide</span>
+                <span class="date">August 5, 2016</span>
             </a>
         </li>
         <li>
-            <a href="#" title="US, ROK air defenders demonstrate resolve during major command post exercise">
+            <a href="#" title="Gen. Joseph Lengyel becomes 28th chief of National Guard Bureau">
                 <span class="image">
-                    <img class="resp-image" srcset="https://www.army.mil/e2/c/images/2016/04/07/429882/size0.jpg 640w, https://www.army.mil/e2/c/images/2016/04/07/429882/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/04/07/429882/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/04/07/429882/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/04/07/429882/size4.jpg 100w" sizes="(min-width: 640px) 640px" src="https://www.army.mil/e2/c/images/2016/04/07/429882/size2.jpg" alt="temp image caption">
+                    <img srcset="https://www.army.mil/e2/c/images/2016/08/04/445649/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/04/445649/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/04/445649/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/04/445649/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/04/445649/size2.jpg" alt="Gen. Joseph Lengyel becomes 28th chief of National Guard Bureau">
                 </span>
-                <span class="date"><span>April 7, 2016</span></span>
-                <span class="title">US, ROK air defenders demonstrate resolve during major command post exercise</span>
+                <span class="title">Gen. Joseph Lengyel becomes 28th chief of National Guard Bureau</span>
+                <span class="date">August 4, 2016</span>
             </a>
         </li>
         <li>
-            <a href="#" title="2 CAB fuelers bolster operations">
+            <a href="#" title="'Road to Rio' includes stops at Fort Leonard Wood">
                 <span class="image">
-                    <img class="resp-image" srcset="https://www.army.mil/e2/c/images/2016/03/16/427389/size0.jpg 640w, https://www.army.mil/e2/c/images/2016/03/16/427389/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/03/16/427389/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/03/16/427389/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/03/16/427389/size4.jpg 100w" sizes="(min-width: 640px) 640px" src="https://www.army.mil/e2/c/images/2016/03/16/427389/size2.jpg" alt="temp image caption">
+                    <img srcset="https://www.army.mil/e2/c/images/2016/08/03/445588/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/03/445588/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/03/445588/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/03/445588/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/03/445588/size2.jpg" alt="'Road to Rio' includes stops at Fort Leonard Wood">
                 </span>
-                <span class="date"><span>March 16, 2016</span></span>
-                <span class="title">2 CAB fuelers bolster operations</span>
+                <span class="title">'Road to Rio' includes stops at Fort Leonard Wood</span>
+                <span class="date">August 3, 2016</span>
             </a>
         </li>
         <li>
-            <a href="#" title="229th Signal recognized for joint training">
+            <a href="#" title="Scientists showcase advanced Army tech for DOD deputy secretary">
                 <span class="image">
-                    <img class="resp-image" srcset="https://www.army.mil/e2/c/images/2016/03/15/427206/size0.jpg 640w, https://www.army.mil/e2/c/images/2016/03/15/427206/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/03/15/427206/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/03/15/427206/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/03/15/427206/size4.jpg 100w" sizes="(min-width: 640px) 640px" src="https://www.army.mil/e2/c/images/2016/03/15/427206/size2.jpg" alt="temp image caption">
+                    <img srcset="https://www.army.mil/e2/c/images/2016/08/03/445616/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/03/445616/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/03/445616/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/03/445616/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/03/445616/size2.jpg" alt="Scientists showcase advanced Army tech for DOD deputy secretary">
                 </span>
-                <span class="date"><span>March 15, 2016</span></span>
-                <span class="title">229th Signal recognized for joint training</span>
+                <span class="title">Scientists showcase advanced Army tech for DOD deputy secretary</span>
+                <span class="date">August 3, 2016</span>
             </a>
         </li>
         <li>
-            <a href="#" title="194th mechanics ensure 'safety first' for fellow soldiers">
+            <a href="#" title="Civil support team catches a different kind of ride to work">
                 <span class="image">
-                    <img class="resp-image" srcset="https://www.army.mil/e2/c/images/2016/03/15/427202/size0.jpg 640w, https://www.army.mil/e2/c/images/2016/03/15/427202/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/03/15/427202/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/03/15/427202/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/03/15/427202/size4.jpg 100w" sizes="(min-width: 640px) 640px" src="https://www.army.mil/e2/c/images/2016/03/15/427202/size2.jpg" alt="temp image caption">
+                    <img srcset="https://www.army.mil/e2/c/images/2016/08/02/445418/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/02/445418/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/02/445418/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/02/445418/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/02/445418/size2.jpg" alt="Civil support team catches a different kind of ride to work">
                 </span>
-                <span class="date"><span>March 15, 2016</span></span>
-                <span class="title">194th mechanics ensure 'safety first' for fellow soldiers</span>
+                <span class="title">Civil support team catches a different kind of ride to work</span>
+                <span class="date">August 2, 2016</span>
             </a>
         </li>
         <li>
-            <a href="#" title="2015 Army Arts and Crafts winners recognized at Humphreys">
+            <a href="#" title="National Guard brigade undertakes unprecedented logistics effort for Saber Guardian">
                 <span class="image">
-                    <img class="resp-image" srcset="https://www.army.mil/e2/c/images/2016/02/29/425076/size0.jpg 640w, https://www.army.mil/e2/c/images/2016/02/29/425076/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/02/29/425076/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/02/29/425076/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/02/29/425076/size4.jpg 100w" sizes="(min-width: 640px) 640px" src="https://www.army.mil/e2/c/images/2016/02/29/425076/size2.jpg" alt="temp image caption">
+                    <img srcset="https://www.army.mil/e2/c/images/2016/08/02/445429/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/08/02/445429/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/08/02/445429/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/08/02/445429/size4.jpg 100w" sizes="(max-width: 45em) 100vw, (max-width: 62em) 30vw, 310px" src="https://www.army.mil/e2/c/images/2016/08/02/445429/size2.jpg" alt="National Guard brigade undertakes unprecedented logistics effort for Saber Guardian">
                 </span>
-                <span class="date"><span>February 29, 2016</span></span>
-                <span class="title">2015 Army Arts and Crafts winners recognized at Humphreys</span>
-            </a>
-        </li>
-        <li>
-            <a href="#" title="Railhead opening moves Camp Humphreys closer to expansion">
-                <span class="image">
-                    <img class="resp-image" srcset="https://www.army.mil/e2/c/images/2016/02/29/425069/size0.jpg 640w, https://www.army.mil/e2/c/images/2016/02/29/425069/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/02/29/425069/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/02/29/425069/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/02/29/425069/size4.jpg 100w" sizes="(min-width: 640px) 640px" src="https://www.army.mil/e2/c/images/2016/02/29/425069/size2.jpg" alt="temp image caption">
-                </span>
-                <span class="date"><span>February 29, 2016</span></span>
-                <span class="title">Railhead opening moves Camp Humphreys closer to expansion</span>
-            </a>
-        </li>
-        <li>
-            <a href="#" title="Pearson assumes responsibility of U.S. Army Garrison Humphreys">
-                <span class="image">
-                    <img class="resp-image" srcset="https://www.army.mil/e2/c/images/2016/02/29/425068/size0.jpg 640w, https://www.army.mil/e2/c/images/2016/02/29/425068/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/02/29/425068/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/02/29/425068/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/02/29/425068/size4.jpg 100w" sizes="(min-width: 640px) 640px" src="https://www.army.mil/e2/c/images/2016/02/29/425068/size2.jpg" alt="temp image caption">
-                </span>
-                <span class="date"><span>February 29, 2016</span></span>
-                <span class="title">Pearson assumes responsibility of U.S. Army Garrison Humphreys</span>
-            </a>
-        </li>
-        <li>
-            <a href="#" title="501st Military Intelligence Brigade welcomes new senior enlisted leader">
-                <span class="image">
-                    <img class="resp-image" srcset="https://www.army.mil/e2/c/images/2016/02/11/423185/size0.jpg 640w, https://www.army.mil/e2/c/images/2016/02/11/423185/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/02/11/423185/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/02/11/423185/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/02/11/423185/size4.jpg 100w" sizes="(min-width: 640px) 640px" src="https://www.army.mil/e2/c/images/2016/02/11/423185/size2.jpg" alt="temp image caption">
-                </span>
-                <span class="date"><span>February 11, 2016</span></span>
-                <span class="title">501st Military Intelligence Brigade welcomes new senior enlisted leader</span>
+                <span class="title">National Guard brigade undertakes unprecedented logistics effort for Saber Guardian</span>
+                <span class="date">August 2, 2016</span>
             </a>
         </li>
     </ul>
