--- a/_scss/_all.scss
+++ b/_scss/_all.scss
@@ -12,6 +12,7 @@
 // Elements
 // ----------------------------------------------------------------------
 @import "elements/accordion";
+@import "elements/announcements";
 @import "elements/buttons";
 @import "elements/custom-select";
 @import "elements/dropdown-nav";
