--- a/_includes/elements/more-news.html
+++ b/_includes/elements/more-news.html
@@ -34,44 +34,52 @@
     </div>
     
     <div class="announcements">
-        <div class="top-headline">
-            <a href="#" title="Department of the Army announces upcoming deployment">
-                <div class="image">
-                    <img srcset="https://www.army.mil/e2/c/images/2016/07/26/444505/size0.jpg 640w, https://www.army.mil/e2/c/images/2016/07/26/444505/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/07/26/444505/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/07/26/444505/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/07/26/444505/size4.jpg 100w" sizes="(max-width: 45em) 100vw, 50vw" src="https://www.army.mil/e2/c/images/2016/07/26/444505/size2.jpg" alt="Department of the Army announces upcoming deployment">
-                </div>
-                <div class="center-block">
-                    <div class="inner-block"><span></span><span></span><span></span><span></span><span></span><span></span></div>
-                    <div class="mid">
-                        <h5>Most Recent Announcement</h5>
-                        <p class="large">Department of the Army announces upcoming deployment</p>
-                    </div>
-                </div>
-            </a>
-        </div>
         <div class="inner">
+            <h4>Announcements</h4>
             <ul>
                 <li>
-                    <span>Jul 14, 2016</span>
-                    <a href="#" title="Army Announces ARCYBER as an ASCC">Army Announces ARCYBER as an ASCC</a>
+                    <a href="#" title="Department of the Army announces upcoming deployment">
+                        <div class="image">
+                            <img srcset="https://www.army.mil/e2/c/images/2016/07/26/444505/size0.jpg 640w, https://www.army.mil/e2/c/images/2016/07/26/444505/size1.jpg 446w, https://www.army.mil/e2/c/images/2016/07/26/444505/size2.jpg 342w, https://www.army.mil/e2/c/images/2016/07/26/444505/size3.jpg 150w, https://www.army.mil/e2/c/images/2016/07/26/444505/size4.jpg 100w" sizes="(max-width: 45em) 100vw, 50vw" src="https://www.army.mil/e2/c/images/2016/07/26/444505/size2.jpg" alt="Department of the Army announces upcoming deployment">
+                        </div>
+                        <div class="center">
+                            <h5>Most Recent</h5>
+                            <p class="large">Department of the Army announces upcoming deployment</p>
+                        </div>
+                    </a>
                 </li>
                 <li>
-                    <span>Jul 06, 2016</span>
-                    <a href="#" title="Army researchers testing Zika vaccine">Army researchers testing Zika vaccine</a>
+                    <a href="#" title="Army Announces ARCYBER as an ASCC">
+                        <span>July 14, 2016</span>
+                        <span>Army Announces ARCYBER as an ASCC</span>
+                    </a>
                 </li>
                 <li>
-                    <span>Jun 30, 2016</span>
-                    <a href="#" title="Sleeves can now be rolled up">Sleeves can now be rolled up</a>
+                    <a href="#" title="Army researchers testing Zika vaccine">
+                        <span>July 06, 2016</span>
+                        <span>Army researchers testing Zika vaccine</span>
+                    </a>
                 </li>
                 <li>
-                    <span>Mar 10, 2016</span>
-                    <a href="#" title="Army outlines gender integration implementation plan">Army outlines gender integration implementation plan</a>
+                    <a href="#" title="Sleeves can now be rolled up">
+                        <span>June 30, 2016</span>
+                        <span>Sleeves can now be rolled up</span>
+                    </a>
                 </li>
                 <li>
-                    <span>Feb 05, 2016</span>
-                    <a href="#" title="Zika Virus - What is it? What can you do?">Zika Virus - What is it? What can you do?</a>
+                    <a href="#" title="Army outlines gender integration implementation plan">
+                        <span>March 10, 2016</span>
+                        <span>Army outlines gender integration implementation plan</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" title="Zika Virus - What is it? What can you do?">
+                        <span>February 05, 2016</span>
+                        <span>Zika Virus - What is it? What can you do?</span>
+                    </a>
                 </li>
             </ul>
-            <a class="more" href="/news/newsreleases" title="More Announcements">More Announcements<span class="view-more-arrow-bg"></span></a>
         </div>
+        <a class="more" href="/news/newsreleases" title="View All Announcements">View All<span class="view-more-arrow-bg"></span></a>
     </div>
 </div>
