--- a/_scss/elements/_news.scss
+++ b/_scss/elements/_news.scss
@@ -13,6 +13,7 @@
 
       a {
         display: block;
+        overflow: hidden;
         position: relative;
 
         &:after {
@@ -22,14 +23,18 @@
           left: 0;
           position: absolute;
           top: 0;
-          width: 0;
+          width: 100%;
+          @include transform(translateX, -100%);
 
-          @include custom-transition(width .25s ease);
+          @include custom-transition(transform .25s ease);
         }
 
-        &:focus,
         &:hover {
           text-decoration: none;
+
+          &:after {
+            @include transform(translateX, 0);
+          }
         }
       }
 
@@ -75,6 +80,8 @@
     margin: 0 auto 50px;
     position: relative;
 
+    ul li a:after { width: 34%; }
+
     .more {
       border-bottom: 2px solid $light-gray-color;
       border-top: 2px solid $light-gray-color;
@@ -83,16 +90,6 @@
       text-transform: uppercase;
 
       &:hover { text-decoration: none; }
-    }
-  }
-  
-  @include breakpoints(lg_tablet sm_desktop desktop large really_big) {
-    ul li {
-      a {
-        &:hover, &:focus {
-          &:after { width: 100%; }
-        }
-      }
     }
   }
 
@@ -115,7 +112,7 @@
 
       ul li {
         @include span(12);
-        margin: 27px 0 0;
+        margin: 45px 0 0;
 
         &:first-child { margin: 0; }
 
@@ -134,11 +131,6 @@
           }
 
           .date { display: none; }
-
-          &:hover,
-          &:focus {
-            &:after { width: 34%; }
-          }
         }
       }
 
