mixins should already be imported here

--- a/_scss/elements/_header.scss
+++ b/_scss/elements/_header.scss
@@ -2,9 +2,10 @@
 // Description: global header styles
 // Used by: Page.scss
 // Dependencies:
+// base/mixins
+// base/custom-mixins
+// modules/usagov-sayt
 // ------------------------------------------------------------
-@import "base/mixins";
-@import "base/custom-mixins";
 
 // ----------------------------------------------------------------------
 // Modules
