snapchat icon added to sprite

--- a/_includes/elements/social-media.html
+++ b/_includes/elements/social-media.html
@@ -10,6 +10,7 @@
   <div class="social-button instagram-button"><a href="#"><span></span></a></div>
   <div class="social-button vimeo-button"><a href="#"><span></span></a></div>
   <div class="social-button armylive-button"><a href="#"><span></span></a></div>
+  <div class="social-button snapchat-button"><a href="#"><span></span></a></div>
   <!-- Regular Black Buttons -->
   <div class="social-button-black facebook-button"><a href="#"><span></span></a></div>
   <div class="social-button-black twitter-button"><a href="#"><span></span></a></div>
@@ -21,4 +22,5 @@
   <div class="social-button-black instagram-button"><a href="#"><span></span></a></div>
   <div class="social-button-black vimeo-button"><a href="#"><span></span></a></div>
   <div class="social-button-black armylive-button"><a href="#"><span></span></a></div>
+  <div class="social-button-black snapchat-button"><a href="#"><span></span></a></div>
 </div>
