updates for new features page banners

--- a/_includes/elements/page-banner.html
+++ b/_includes/elements/page-banner.html
@@ -1,12 +1,13 @@
-<div class="page-banner1 page-banner news-wide parallax-image">
+<div class="page-banner1 page-banner news-wide standard parallax-image">
     <div class="full-width-image">
+        <div class="overlay-effect"></div>
         <img src="https://www.army.mil/e2/images/rv7/global-news/mastheads/1600.jpg" srcset="https://www.army.mil/e2/images/rv7/global-news/mastheads/1600.jpg 1600w, https://www.army.mil/e2/images/rv7/global-news/mastheads/1200.jpg 1200w, https://www.army.mil/e2/images/rv7/global-news/mastheads/992.jpg 992w, https://www.army.mil/e2/images/rv7/global-news/mastheads/768.jpg 768w, https://www.army.mil/e2/images/rv7/global-news/mastheads/480.jpg 480w">
     </div>
     <div class="container">
         <div class="inner-container">
             <div class="left-container">
                 <h1>Army Worldwide</h1>
-                <p>The U.S. Army is globally engaged supporting Combatant Command missions.</p>
+                <h2>Globally Responsive, <br>Regionally Engaged</h2>
             </div>
         </div>
     </div>
@@ -19,7 +20,7 @@
     <div class="container">
         <div class="inner-container">
             <div class="left-container">
-                <div class="inline-logo">
+                <div class="logo">
                     <img alt="SA Office Flag" src="https://www.army.mil/e2/images/rv7/leaders/flags/secarmy_flag.jpg">
                 </div>
 
@@ -58,15 +59,31 @@
     </div>
 </div>
 
+<div class="page-banner4 page-banner parallax-image standard">
+    <div class="full-width-image">
+        <div class="overlay-effect"></div>
+        <img src="/e2/images/rv7/banner-graphics/1200.jpg" srcset="/e2/images/rv7/banner-graphics/2500.jpg 2500w, /e2/images/rv7/banner-graphics/1200.jpg 1200w, /e2/images/rv7/banner-graphics/992.jpg 992w, /e2/images/rv7/banner-graphics/768.jpg 768w">
+    </div>
+    <div class="container">
+        <div class="inner-container">
+            <div class="left-container">
+                <h1>Valor</h1>
+                <h2>Above and Beyond <br>the Call of Duty</h2>
+            </div>
+        </div>
+    </div>
+</div>
+
 <nav>
     <input type="checkbox" id="subnav-toggle">
     <div class="subnav-container">
         <div class="subnav-inner">
             <label for="subnav-toggle">News Filters</label>
             <ul class="container">
-                <li><a class="active" id="page-banner1" href="">Standard</a></li>
+                <li><a class="active" data-id="page-banner1" href="">Standard</a></li>
                 <li><a href="#page-banner2">Leaders</a></li>
                 <li><a href="#page-banner3">Org Pages</a></li>
+                <li><a href="#page-banner4">Features</a></li>
             </ul>
         </div>
     </div>
