--- a/css/banners.scss
+++ b/css/banners.scss
@@ -24,6 +24,34 @@ section {
         color: map-get($army-branding, gold);
         margin-bottom: 15px;
       }
+
+      .max-width-container {
+        float: left;
+      }
+
+      .left-container {
+        vertical-align: bottom;
+
+        @include breakpoints(really_big) {
+          height: 500px;
+        }
+
+        @include breakpoints(large) {
+          height: 450px;
+        }
+
+        @include breakpoints(tablet lg_tablet sm_desktop desktop) {
+          height: 325px;
+        }
+
+        @include breakpoints(nav) {
+          height: 250px;
+        }
+
+        @media (min-width: 2000px) {
+          height: 550px;
+        }
+      }
     }
 
     @include breakpoints(mobile nav) {
@@ -31,8 +59,11 @@ section {
     }
 
     @include breakpoints(mobile) {
-      padding-top: 0;
-
+      .container .inner-container {
+        .max-width-container {
+          float: none;
+        }
+      }
       .full-width-image {
         display: block;
         position: relative;
@@ -48,21 +79,24 @@ section {
     }
   }
 
-  // .page-banner.news-wide {
-  //   .full-width-image {
-  //     position: absolute;
-  //     max-height: none;
-  //   }
+  .page-banner.news-wide {
+    .full-width-image {
+      // position: absolute;
+      // max-height: none;
+      img {
+        filter: brightness(2);
+      }
+    }
 
-  //   @include breakpoints(mobile) {
-  //     padding-top: 50px;
+    // @include breakpoints(mobile) {
+    //   padding-top: 50px;
 
-  //     .full-width-image {
-  //       left: -1000px;
-  //       position: absolute;
-  //       right: -1000px;
-  //       width: auto;
-  //     }
-  //   }
-  // }
+    //   .full-width-image {
+    //     left: -1000px;
+    //     position: absolute;
+    //     right: -1000px;
+    //     width: auto;
+    //   }
+    // }
+  }
 }
