--- a/_scss/elements/_page-banner.scss
+++ b/_scss/elements/_page-banner.scss
@@ -82,6 +82,13 @@
       line-height: 0;
       margin-bottom: 20px;
     }
+    
+    // 1156+
+    @include breakpoints(desktop large really_big) {
+      .inner-container {
+        h1 { font-size: 2.5em; }
+      }
+    }
 
     // 769 - 992
     @include breakpoints(lg_tablet) {
@@ -167,7 +174,7 @@
     z-index: 2;
 
     &::before {
-      @include custom-linear-gradient(to right, rgba(0, 0, 0, 0) 0px, rgba(30, 30, 30, 0.5) 0px, rgba(70, 70, 70, 0.7) 50%, rgba(30, 30, 30, 0.5));
+      @include custom-linear-gradient(to right, rgba(0, 0, 0, 0) 0px, rgba(35, 31, 32, 0.5) 0px, rgba(35, 31, 32, 0.8) 50%, rgba(35, 31, 32, 0.5));
       content: "";
       height: 100%;
       position: absolute;
@@ -315,11 +322,16 @@
         }
       }
       h2 {
-        font-size: 2.25em;
+        font-size: 2.5em;
         font-weight: 700;
         line-height: 1.125em;
         text-align: center;
         text-shadow: none;
+      }
+      @include breakpoints(tablet lg_tablet sm_desktop) {
+        h2 {
+          font-size: 2.25em;
+        }
       }
       @include breakpoints(mobile nav) {
         h1 {
