--- a/_includes/elements/page-banner.html
+++ b/_includes/elements/page-banner.html
@@ -13,7 +13,7 @@
     </div>
 </div>
 
-<div class="page-banner2 page-banner leader-banner image-gradient parallax-image">
+<div class="page-banner2 page-banner leader-banner image-gradient parallax-image image-to-top">
     <div class="full-width-image">
         <img src="https://www.army.mil/e2/images/rv7/leaders/masthead/sa/1600.jpg" srcset="https://www.army.mil/e2/images/rv7/leaders/masthead/sa/1600.jpg 1600w, https://www.army.mil/e2/images/rv7/leaders/masthead/sa/1200.jpg 1200w, https://www.army.mil/e2/images/rv7/leaders/masthead/sa/992.jpg 992w, https://www.army.mil/e2/images/rv7/leaders/masthead/sa/768.jpg 768w, https://www.army.mil/e2/images/rv7/leaders/masthead/sa/480.jpg 480w">
     </div>
