updated features page links in global menu

--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -54,10 +54,10 @@
               <li>
                   <a href="javascript:;" class="menu-item">FEATURES<span></span></a>
                   <ul>
-                    <li><a href="//www.army.mil/features/#valorFeatures">Valor</a></li>
-                    <li><a href="//www.army.mil/features/#eventsFeatures">Events</a></li>
-                    <li><a href="//www.army.mil/features/#heritageFeatures">Heritage</a></li>
-                    <li><a href="//www.army.mil/features/#resourcesFeatures">Outreach/Initiatives</a></li>
+                    <li><a href="//www.army.mil/features/">Valor</a></li>
+                    <li><a href="//www.army.mil/features/#events">Events</a></li>
+                    <li><a href="//www.army.mil/features/#heritage">Heritage</a></li>
+                    <li><a href="//www.army.mil/features/#army101">Army 101</a></li>
                   </ul>
               </li>
               <li class="social">
