--- a/_includes/elements/header.html
+++ b/_includes/elements/header.html
@@ -54,7 +54,7 @@
               <li>
                   <a href="javascript:;" class="menu-item">FEATURES<span></span></a>
                   <ul>
-                    <li><a href="//www.army.mil/features/">Valor</a></li>
+                    <li><a href="//www.army.mil/features/#valor">Valor</a></li>
                     <li><a href="//www.army.mil/features/#events">Events</a></li>
                     <li><a href="//www.army.mil/features/#heritage">Heritage</a></li>
                     <li><a href="//www.army.mil/features/#army101">Army 101</a></li>
