changed font sizes, changed leader specific css, and added more sm icons for testing

--- a/_includes/elements/page-banner.html
+++ b/_includes/elements/page-banner.html
@@ -32,9 +32,19 @@
 
                     <ul class="social-links">
                         <li class="social-button facebook-button">
-                            <a title="bannerHeading on Facebook" href="http:www.facebook.com/">
-                                <span></span>
-                            </a>
+                            <a target="_blank" href="https://www.facebook.com/secarmy22/"><span></span></a>
+                        </li>
+                        <li class="social-button twitter-button">
+                            <a target="_blank" href="https://twitter.com/SECARMY"><span></span></a>
+                        </li>
+                        <li class="social-button flickr-button">
+                            <a target="_blank" href="https://www.flickr.com/photos/sec-army-pao/sets"><span></span></a>
+                        </li>
+                        <li class="social-button instagram-button">
+                            <a target="_blank" href="https://www.instagram.com/secarmy/"><span></span></a>
+                        </li>
+                        <li class="social-button snapchat-button">
+                            <a target="_blank" href="https://www.army.mil/article/172345"><span></span></a>
                         </li>
                     </ul>
                 </div>
@@ -53,6 +63,29 @@
                 <h1>Page Banners</h1>
                 <div class="max-width-container">
                     <p>Short banner description area here. Should only be a few sentences, at most.</p>
+                    <ul class="social-links">
+                        <li class="social-button facebook-button">
+                            <a title="USAG Humphreys on Facebook" href="https://www.facebook.com/usaghumphreys"><span></span></a>
+                        </li>
+                        <li class="social-button twitter-button">
+                            <a title="USAG Humphreys on Twitter" href="https://twitter.com/usaghumphreys"><span></span></a>
+                        </li>
+                        <li class="social-button pinterest-button">
+                            <a title="USAG Humphreys on Pinterest" href="https://www.pinterest.com/usaghumphreys"><span></span></a>
+                        </li>
+                        <li class="social-button youtube-button">
+                            <a title="USAG Humphreys on YouTube" href="https://www.youtube.com/usaghumphreys"><span></span></a>
+                        </li>
+                        <li class="social-button flickr-button">
+                            <a title="USAG Humphreys on Flickr" href="https://www.flickr.com/usaghumphreys"><span></span></a>
+                        </li>
+                        <li class="social-button vimeo-button">
+                            <a title="USAG Humphreys on Vimeo" href="https://vimeo.com/usaghumphreys"><span></span></a>
+                        </li>
+                        <li class="social-button slideshare-button">
+                            <a title="USAG Humphreys on SlideShare" href="http://www.slideshare.net/usaghumphreys"><span></span></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
