--- a/_scss/elements/_page-banner.scss
+++ b/_scss/elements/_page-banner.scss
@@ -30,7 +30,7 @@
 
       h1 {
         color: map-get($army-branding, gold);
-        font: 700 2.25em/1.125em $font-family;
+        font: 700 1.875em/1 $font-family;
         text-transform: uppercase;
         text-align: left;
         padding-bottom: 3px;
@@ -43,7 +43,7 @@
       }
       h2 {
         color: map-get($army-branding, white);
-        font: 400 1.5em $font-family;
+        font: 400 1.125em $font-family;
         text-align: left;
         margin: 0;
         &:after {
@@ -61,13 +61,12 @@
         font-size: 0;
         margin-top: 12px;
         padding-top: 12px;
-        word-spacing: -1;
 
         li.social-button {
           display: inline-block;
 
           a {
-            padding: 8px 8px 0;
+            padding: 5px 10px;
             display: block;
 
             span {
@@ -82,11 +81,25 @@
       line-height: 0;
       margin-bottom: 20px;
     }
-    
-    // 1156+
-    @include breakpoints(desktop large really_big) {
+
+    @media (min-width: 481px) {
       .inner-container {
+        h2 { font-size: 1.25em; }
+        h1 { font-size: 2.25em; }
+      }
+    }
+
+    @media (min-width: 769px) {
+      .inner-container {
+        h2 { font-size: 1.5em; }
         h1 { font-size: 2.5em; }
+      }
+    }
+
+    // 481+
+    @include breakpoints(nav tablet lg_tablet desktop sm_desktop large really_big) {
+      .inner-container ul.social-links {
+        li.social-button:first-child a { padding: 5px 10px 5px 0; }
       }
     }
 
@@ -98,17 +111,6 @@
     // 700 - 768
     @include breakpoints(tablet) {
       max-width: $container-sm;
-      .inner-container {
-        h1 { font-size: 2.25em; }
-        h2 { font-size: 1.25em; }
-      }
-    }
-
-    @include breakpoints(mobile nav) {
-      .inner-container {
-        h1 { font-size: 1.875em; }
-        h2 { font-size: 1.125em; }
-      }
     }
 
     @include breakpoints(mobile) {
